<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SendImage">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_instructions"
                android:id="@+id/textView" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/btnTakePhotoText"
                    android:id="@+id/btnTakePhoto"
                    android:onClick="takephotoClick"
                    android:layout_weight=".49" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/btnSelectPhotoText"
                    android:id="@+id/btnSelectPhoto"
                    android:onClick="pickphotoClick"
                    android:layout_weight=".49" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgSelectedImage"
                android:contentDescription="@string/imgSelectedImage_contentDescription"
                android:adjustViewBounds="true"
                android:clickable="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUrl"
                android:hint="@string/nameOfUrlField"
                android:editable="true"
                android:text="@string/default_post_url"
                android:inputType="textUri" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="83dp"
                android:text="@string/btnSubmitText"
                android:id="@+id/btnSubmit"
                android:onClick="submitClick"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
